--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
   <body>
     <div class="container">
       <img class="picture" src="./images/image-qr-code.png" alt="" />
-      <h1>
-        Improve your front-end skills by building projects Scan the QR code to
-      </h1>
+      <h1>Improve your front-end skills by building projects</h1>
       <p>
-        Scan the QR code to visit Frontend Mentor and take your coding skills to the next level.
+        Scan the QR code to visit Frontend Mentor and take your coding skills to
+        the next level.
       </p>
     </div>
 
